--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Feel free to edit the HTML and CSS to make it your own. You can also check the R
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Jailson Barros</h1>
+          <h1 class="name" title="Richard hanrick">Jailson Barros de Lima</h1>
 
           <p class="title">Web developer</p>
         </div>
