--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ Feel free to edit the HTML and CSS to make it your own. You can also check the R
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/jailson.jpg" alt="Jailson Barros" width="80">
+          <img src="./assets/images/jailson.png" alt="Jailson Barros" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Jailson Barros de Lima</h1>
+          <h1 class="name" title="Richard hanrick">Jailson Barros</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -149,7 +149,7 @@ Feel free to edit the HTML and CSS to make it your own. You can also check the R
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="instagram.com/jailson_barross" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -1155,7 +1155,7 @@ Feel free to edit the HTML and CSS to make it your own. You can also check the R
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              src="https://www.google.com.br/maps/@-22.9946667,-43.2491866,15z?entry=ttu"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
